--- a/.github/workflows/menuconfig-lts.yml
+++ b/.github/workflows/menuconfig-lts.yml
@@ -85,7 +85,7 @@ jobs:
         ## limits ssh access and adds the ssh public keys of the listed GitHub users
         # DANGER: Discouraged. Prefer 'limit-access-to-actor' instead.
         #limit-access-to-users: githubuser1,githubuser2
-      timeout-minutes: 320
+      #timeout-minutes: 320
     - name: artifacts
       uses: actions/upload-artifact@v3
       with:
