--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -419,7 +419,7 @@ jobs:
         #cat ${{ github.workspace }}/artifact.txt
         #cat ./artifact.txt
         #
-        docker run -it --name debian_bookworm-docker-container --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
+        docker run --name debian_bookworm-docker-container --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
         docker rm debian_bookworm-docker-container
         false
     - name: _getMinimal_cloud
