--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -428,9 +428,8 @@ jobs:
         #cat ${{ github.workspace }}/artifact.txt
         #cat ./artifact.txt
         #
-        docker run --name debian_bookworm-docker-container --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
-        docker run --name debian_bookworm-docker-container --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_lts-server'
-        docker rm debian_bookworm-docker-container
+        docker run --name debian_bookworm-docker-container --rm --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
+        docker run --name debian_bookworm-docker-container --rm --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_lts-server'
         false
     - name: _getMinimal_cloud
       #if: ${{ github.event.inputs.container == 'none' }}
