--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -401,7 +401,11 @@ jobs:
         fetch-depth: 1
         submodules: 'recursive'
     # https://moebuta.org/posts/using-github-actions-to-build-linux-kernels/?utm_source=chatgpt.com
+    # https://dev.to/emmanuelnk/using-sudo-without-password-prompt-as-non-root-docker-user-52bg
+    # https://stackoverflow.com/questions/35594987/how-to-force-docker-for-a-clean-build-of-an-image
+    # https://www.howtogeek.com/devops/how-to-make-docker-rebuild-an-image-without-its-cache/
     # ATTRIBUTION-AI: ChatGPT  4o , o1  2025-01-18 .
+    # ATTENTION: See Dockerfile for additional very relevant example commands, documentation, CAUTIONs, DANGERs, WARNINGs, etc !
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Log in to GitHub Container Registry
@@ -411,25 +415,14 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: build docker image
+      #if: ${{ github.event.inputs.container == 'docker' || github.event.inputs.container == '' }}
       run: |
-        #docker build -t debian_bookworm-docker-image .
-        docker build --build-arg HOST_UID=$(id -u) --build-arg HOST_GID=$(id -g) -t debian_bookworm-docker-image:latest .
+        docker build --pull --no-cache --build-arg HOST_UID=$(id -u) --build-arg HOST_GID=$(id -g) -t debian_bookworm-docker-image:latest .
     - name: _build_cloud_lts! docker
       if: ${{ github.event.inputs.container == 'docker' || github.event.inputs.container == '' }}
       run: |
-        #docker run -it --name debian_bookworm-docker-container -d debian_bookworm-docker-image:latest
-        #docker run -it --name debian_bookworm-docker-container -d debian_bookworm-docker-image:latest --rm "${dockerRunArgs[@]}" "$dockerImageObjectName" "${processedArgs[@]}"
-        #docker run -it --name debian_bookworm-docker-container --rm debian_bookworm-docker-image:latest bash -c 'echo "Hello, World!" > /artifact.txt'
-        #docker run -it --name debian_bookworm-docker-container --rm debian_bookworm-docker-image:latest bash -c 'echo $PWD | tee /artifact.txt'
-        #
-        #docker run -it --name debian_bookworm-docker-container -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c 'echo $PWD | tee /artifact.txt'
-        #docker cp debian_bookworm-docker-container:/artifact.txt ${{ github.workspace }}
-        #docker rm debian_bookworm-docker-container
-        #cat ${{ github.workspace }}/artifact.txt
-        #cat ./artifact.txt
-        #
-        docker run --name debian_bookworm-docker-container --rm --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
-        docker run --name debian_bookworm-docker-container --rm --user "$(id -u):$(id -g)" -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_lts-server'
+        docker run --name debian_bookworm-docker-container --rm -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_prepare'
+        docker run --name debian_bookworm-docker-container --rm -v "$PWD":/currentPWD:rw debian_bookworm-docker-image:latest bash -c './ubiquitous_bash.sh _build_cloud_lts-server'
         true
     - name: _getMinimal_cloud
       #if: ${{ github.event.inputs.container == 'none' }}
